--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: wake_on_lan
 description: Send wake on LAN magic packets to devices on your local network.
 version: 1.1.1
-homepage: https://github.com/CometTools/Packages
-repository: https://github.com/CometTools/Packages/tree/master/packages/wake_on_lan
-issue_tracker: https://github.com/CometTools/Packages/issues
+homepage: https://github.com/CometTools/wake_on_lan
+repository: https://github.com/CometTools/wake_on_lan
+issue_tracker: https://github.com/CometTools/wake_on_lan/issues
 environment:
   sdk: ">=2.7.0 <3.0.0"
 dependencies:
